--- a/package.json
+++ b/package.json
@@ -12,8 +12,17 @@
     "gulp": "^4.0.2"
   },
   "devDependencies": {
+    "eslint": "^6.7.2",
+    "eslint-config-standard": "^14.1.0",
+    "eslint-plugin-import": "^2.19.1",
+    "eslint-plugin-node": "^10.0.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
     "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.5",
     "gulp-watch": "^5.0.1"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
   }
 }
